--- a/tasktk.nlg.multiwoz_template_nlg.html
+++ b/tasktk.nlg.multiwoz_template_nlg.html
@@ -25,15 +25,15 @@
 
   
 
-  <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
-  <!-- <link rel="stylesheet" href="_static/pygments.css" type="text/css" /> -->
+  <link rel="stylesheet" href="static/css/theme.css" type="text/css" />
+  <!-- <link rel="stylesheet" href="static/pygments.css" type="text/css" /> -->
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="tasktk.nlu package" href="tasktk.nlu.html" />
     <link rel="prev" title="tasktk.nlg package" href="tasktk.nlg.html" /> 
 
   
-  <script src="_static/js/modernizr.min.js"></script>
+  <script src="static/js/modernizr.min.js"></script>
 </head>
 
 <div class="container-fluid header-holder tutorials-header" id="header-holder">
@@ -342,7 +342,7 @@ See <cite>example</cite> function in this file for usage.</p>
   
 
      
-       <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
+       <script type="text/javascript" id="documentation_options" data-url_root="./" src="static/documentation_options.js"></script>
          <script type="text/javascript" src="_static/jquery.js"></script>
          <script type="text/javascript" src="_static/underscore.js"></script>
          <script type="text/javascript" src="_static/doctools.js"></script>
@@ -351,9 +351,9 @@ See <cite>example</cite> function in this file for usage.</p>
 
   
 
-  <script type="text/javascript" src="_static/js/vendor/popper.min.js"></script>
-  <script type="text/javascript" src="_static/js/vendor/bootstrap.min.js"></script>
-  <script type="text/javascript" src="_static/js/theme.js"></script>
+  <script type="text/javascript" src="static/js/vendor/popper.min.js"></script>
+  <script type="text/javascript" src="static/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="static/js/theme.js"></script>
 
   <script type="text/javascript">
       jQuery(function () {
@@ -414,7 +414,7 @@ See <cite>example</cite> function in this file for usage.</p>
 
   <!-- End Mobile Menu -->
 
-  <script type="text/javascript" src="_static/js/vendor/anchor.min.js"></script>
+  <script type="text/javascript" src="static/js/vendor/anchor.min.js"></script>
 
   <script type="text/javascript">
     $(document).ready(function() {
