--- a/modules.html
+++ b/modules.html
@@ -57,7 +57,7 @@
           </li> -->
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/">Tutorials</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/">Tutorials</a>
           </li>
 
           <li>
@@ -336,7 +336,7 @@
           </li>
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/">Tutorials</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/">Tutorials</a>
           </li>
 
           <li>
