--- a/search.html
+++ b/search.html
@@ -57,7 +57,7 @@
           </li> -->
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/">Tutorials</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/">Tutorials</a>
           </li>
 
           <li>
@@ -339,7 +339,7 @@
           </li>
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/">Tutorials</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/">Tutorials</a>
           </li>
 
           <li>
