--- a/tasktk.nlu.html
+++ b/tasktk.nlu.html
@@ -59,7 +59,7 @@
           </li> -->
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/">Tutorials</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/">Tutorials</a>
           </li>
 
           <li>
@@ -688,7 +688,7 @@
           </li>
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/">Tutorials</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/">Tutorials</a>
           </li>
 
           <li>
