--- a/tasktk.policy.system.qlearning.html
+++ b/tasktk.policy.system.qlearning.html
@@ -59,7 +59,7 @@
           </li> -->
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/">Tutorials</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/">Tutorials</a>
           </li>
 
           <li>
@@ -422,7 +422,7 @@
           </li>
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/">Tutorials</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/">Tutorials</a>
           </li>
 
           <li>
