--- a/tasktk.util.html
+++ b/tasktk.util.html
@@ -58,7 +58,7 @@
           </li> -->
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/">Tutorials</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/">Tutorials</a>
           </li>
 
           <li>
@@ -492,7 +492,7 @@ Example: {‘price’: ‘expensive’, ‘location’: ‘north’}</td>
           </li>
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/">Tutorials</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/">Tutorials</a>
           </li>
 
           <li>
